added flex wrap on container

--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,7 @@ header{
     width: 100%;
     margin:0 auto;
     display: flex;
+    flex-wrap: wrap;
 }
 .first-container{
     background-image: url(../images/main-image.png);
